# study-Tools-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/study_tools_mcp/: __init__.py  client.py  config.py  server.py
src/study_tools_mcp/parsers/: __init__.py  md_parser.py  pdf_parser.py
src/study_tools_mcp/tools/: __init__.py  explainer.py  flashcards.py  quiz_gen.py  summarizer.py
src/study_tools_mcp/utils/: __init__.py  logger.py
static/css/: style.css
static/js/: app.js
templates/: index.html
